# flamethrower

./: .gitignore  README.md  build.sh  dnd35-test.db  go.mod  go.sum  main.go  main.py  pyproject.toml  sheet.xlsx
.github/: build.yml
.github/workflows/: build.yml  docs.yml
docs/: conf.py  search.js  src.html  src.rst
docs/_build/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.db.doctree  src.doctree  src.routers.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.db.html  src.html  src.routers.html
docs/ext/: sqlalchemy_autodoc.py
docs/src/: db.html  definitions.html  routers.html  wrappers.html
docs/src/db/: class_table.html  engine.html
docs/src/routers/: classes.html
src/: definitions.py  wrappers.py
src/constants/: constants.go
src/db/: __init__.py  base.go  class.go  class_table.go  class_table.py  engine.go  engine.py  types.go
src/db/model/: class.go  class_level_table.go  class_table.go  domain.go  equipment.go  feat.go  item.go  monster.go  power.go  skill.go  spell.go
src/db/table/: class.go  class_level_table.go  class_table.go  domain.go  equipment.go  feat.go  (+6 more)
src/engine/: db.go
src/handlers/: error.go
src/helpers/: helpers.go
src/routers/: classes.py
src/types/: types.go
src/views/: class_detail.go  class_detail_view.go  class_level_detail.go  class_list_view.go  class_list_view_test.go  class_view.go  error.go  helpers.go  types.go  views.drawio
(+12 files in other folders)
